MonetDB/src/mal/Tests/tst106.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2001, CWI. All rights reserved.
# compiled for i686-pc-linux-gnu/32bit.
# gdk_dbfarm:/ufs/mk/monet_5-0/Linux/../dbfarm
# gdk_dbname:demo
# gdk_dbdir:/ufs/mk/monet_5-0/Linux/../dbfarm/demo
# gdk_distr:/ufs/mk/monet_5-0/Linux
# monetrc:/ufs/mk/.monet.conf
## check in-compatible polmorphic types
#
#command f(a:any::1,b:any::2, c:any::1) :bat[any::1,any::2] = f;
!ERROR: address of function 'f' not found
command Admin.f(a:any::1,b:any::2,c:any::1):bat[any::1,any::2] = f;	#0 polymorphic:void (f:bat[any::1,any::2])(a:any::1)(b:any::2)(c:any::1)
#
#b:= f(1,2,"help");
#a:= f(1,2,1);
#
!ERROR: 'f' undefined in Admin.main[1]
function Admin.main():int;	#0:void (main:int)
	b := f(1,2,"help");	#1 unknown:void (b:any)($2:int)($3:int)($4:str)
	a := Admin.f(1,2,1);	#2:BAT (a:bat[int,int])($2:int)($3:int)($2:int)
end function;	#3:void 
!ERROR: MALexception:Admin.main[4]:propagated
MALexception:Admin.main[1]:Instruction type not fixed
>